tests/baselines/reference/resolutionModeTripleSlash4.errors.txt
/tsconfig.json(4,25): error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.
/app.ts(1,23): error TS2688: Cannot find type definition file for 'foo'.
/app.ts(2,1): error TS2304: Cannot find name 'MODULE'.
/app.ts(3,1): error TS2552: Cannot find name 'SCRIPT'. Did you mean 'WScript'?


==== /tsconfig.json (1 errors) ====
    {
      "compilerOptions": {
        "module": "esnext",
        "moduleResolution": "node10",
                            ~~~~~~~~
!!! error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107:   Visit https://aka.ms/ts6 for migration information.
        "noEmit": true,
        "types": []
      }
    }
    
==== /app.ts (3 errors) ====
    /// <reference types="foo" />
                          ~~~
!!! error TS2688: Cannot find type definition file for 'foo'.
    MODULE; // error
    ~~~~~~
!!! error TS2304: Cannot find name 'MODULE'.
    SCRIPT; // error
    ~~~~~~
!!! error TS2552: Cannot find name 'SCRIPT'. Did you mean 'WScript'?
!!! related TS2728 lib.scripthost.d.ts:--:--: 'WScript' is declared here.
    
==== /node_modules/@types/foo/package.json (0 errors) ====
    {
      "name": "@types/foo",
      "version": "1.0.0",
      "exports": {
        ".": {
          "import": "./index.d.mts",
          "require": "./index.d.cts"
        }
      }
    }
    
==== /node_modules/@types/foo/index.d.mts (0 errors) ====
    export {};
    declare global {
      const MODULE: any;
    }
    
==== /node_modules/@types/foo/index.d.cts (0 errors) ====
    export {};
    declare global {
      const SCRIPT: any;
    }
    